--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "dsa-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "lowdb": "^7.0.1",
-    "nanoid": "^5.1.5"
+    "express": "^4.18.2",
+    "lowdb": "^6.0.1",
+    "nanoid": "^5.0.2",
+    "cors": "^2.8.5"
   }
 }
